# csv2db

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  charset2utf  csv2db  csv2db.bat  icon.txt  pyproject.toml
.github/workflows/: functional_tests.yaml  publish-to-container-registries.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release.yml  test_load_db2.yml  test_load_sqlserver.yml  tests-functional.yml  tests-load-db2.yml  tests-load-mysql.yml  tests-load-oracle.yml  tests-load-postgres.yml  tests-load-sqlserver.yml  tests_functional.yaml  tests_functional.yml  tests_load_mysql.yml  tests_load_oracle.yml  tests_load_postgres.yml
src/: main.py
src/csv2db/: __init__.py  config.py  functions.py
src/python/: config.py  constants.py  csv2db.py  databases.py  functions.py
test/: tests_functional.py  tests_loading.py  tests_loading_mysql.py  tests_loading_oracle.py  tests_loading_postgres.py  tests_loading_sqlserver.py
test/python/: functional_tests.py  loading_tests.py  test_loading_db2.py  tests_functional.py  tests_loading.old.py  tests_loading.py  tests_loading_db2.py  tests_loading_mysql.py  tests_loading_oracle.py  tests_loading_postgres.py  tests_loading_sqlserver.py  unit_tests.py
test/resources/: 201811-citibike-tripdata-bad-data.csv  201811-citibike-tripdata.csv  201812-citibike-tripdata.psv  201812-citibike-tripdata.tsv  create_test_infrastructure.sql  drop_test_infrastructure.sql
test/resources/bad/: 201811-citibike-tripdata-bad-data.csv
test/resources/test_env/: Container_test_env.txt  Docker test env.txt  setup_mysql.sql  setup_oracle.sql  setup_postgres.sql  setup_sqlserver.sql
test/resources/test_env/mysql/: create_db_mysql.sql
test/resources/test_env/oracle/: create_db_oracle.sql
test/resources/test_env/postgres/: create_db_postgres.sql
test/resources/test_env/schema/: 01_create_test_tables.sql  setup_schema.sql
test/resources/test_env/sqlserver/: create_db_sqlserver.sql
test/resources/test_files/: 201811-citibike-tripdata-utf-16.csv
test/resources/test_files/bad/: 201811-citibike-tripdata-empty-cols.csv  (+2 more)
(+1 files in other folders)
